# Auxilo-box

./: .gitmodules  CLEAN.sh  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.cfg  config_EXAMPLE.cfg  connect_to_wlan.sh  demo.cpp  demo_kali.cpp  install.sh  main.cpp  main_backup.cpp  nexa_pair.cpp  wlan.txt
Communications/: CMakeLists.txt  CTestTestfile.cmake  Client.cpp  Client.hpp  ClientObserver.cpp  ClientObserver.hpp  ClientWrapper.cpp  ClientWrapper.hpp  Communications.cpp  Communications.hh  Help & Links.txt  Makefile  Message.cpp  Message.hpp  SocketMessage.cpp  SocketMessage.hpp  cmake_install.cmake  protocol.pb.cc  protocol.pb.h  protocol.proto
Devices/: Device.hh  voice control source.txt
Devices/NexaPlug/: NexaPlug.cpp  NexaPlug.hh  main.c  radio.c  radio.h
Devices/Plugs/: Plugs.cpp  Plugs.hh
Devices/Speaker/: Speaker.cpp  Speaker.hh  Speaker_old.cpp  Speaker_old.hh  repeat.sh  stop.sh  vlcStatus.sh
Devices/Voice/: dht22.pl  google_output.json  parse_voice.pl  voice.cpp  voice.hh  voice.sh
Devices/Webcam/: Webcam.cpp  Webcam.hh
GPIO/: GPIO.cpp  GPIO.hh
Helpfunctions/: a.out  date_diff_sec.sh  helpfunctions.cpp  helpfunctions.hh  linkki.txt  main.cpp
Sensors/: sensor.hh
Sensors/Humidity/: DHT22.pl  Humidity.cpp  Humidity.hh  parse_humidity.pl
Sensors/Motion/: Motion.hh
Sensors/Switch/: Links.txt  Switch.cpp  Switch.hh
Sensors/Thermometer/: Thermometer.cpp  Thermometer.hh  Thermometer.pl  Thermometer.sh  Thermometer_old.cpp  lämpötila-anturi  lämpötila-anturi.txt
Wlan/: connect.sh  scan.sh  wlan.cpp  wlan.hh  wlan_scan.txt  wlan_scan_fail.txt
